RSpec and Cucumber tests for profile editing feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,11 @@
 
     <%= yield %>
 
+    <% flash.each do |key, message| %>
+      <div class="d-none" data-test="flash-message"><%= message %></div>
+    <% end %>
+
+
     <footer class="footer">
       <div class="footer-content">
         &copy; 2025 Job Tracker. All rights reserved.
