--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,19 @@
 <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "signup-form" }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="signup-field field">
+    <%= f.label :email, class: "signup-label" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "signup-input" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="signup-actions">
+    <%= f.submit "Send me reset password instructions", class: "signup-submit" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="signup-footer">
+  <%= link_to "Log in", new_session_path(resource_name), class: "login-link" %> |
+  <%= link_to "Sign up", new_registration_path(resource_name), class: "signup-link" %>
+</div>
