--- a/app/views/dashboard/personal_info.html.erb
+++ b/app/views/dashboard/personal_info.html.erb
@@ -1,3 +1,4 @@
+<div class="container d-flex justify-content-between align-items-center mt-4">
 <div class="info-container text-center">
   <h2 class="page-title">Personal Information</h2>
 
@@ -21,4 +22,5 @@
     <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary w-100" %>
     <%= link_to "Back to Dashboard", dashboard_path, class: "btn btn-secondary w-100" %>
   </div>
+</div>
 </div>
